# vinecopulib

./: .clang-tidy  .gitignore  CMakeLists.txt
.github/actions/install-dependencies/: action.yml
.github/workflows/: continuous_integration.yml
examples/benchmark/src/: main.cpp
include/vinecopulib/bicop/: abstract.hpp  class.hpp  extreme_value.hpp  family.hpp  fit_controls.hpp  parametric.hpp  tll.hpp
include/vinecopulib/bicop/implementation/: abstract.ipp  class.ipp  extreme_value.ipp  family.ipp  fit_controls.ipp  kernel.ipp  parametric.ipp  tawn.ipp  tll.ipp
include/vinecopulib/misc/: fit_controls.hpp  nlohmann_json.hpp  tools_serialization.hpp  tools_thread.hpp  triangular_array.hpp
include/vinecopulib/misc/implementation/: tools_interpolation.ipp  tools_optimization.ipp
include/vinecopulib/vinecop/: class.hpp  fit_controls.hpp  rvine_structure.hpp
include/vinecopulib/vinecop/implementation/: class.ipp  fit_controls.ipp  rvine_structure.ipp  tools_select.ipp
test/: CMakeLists.txt
test/src_test/: kernel_test.cpp  parbicop_test.cpp
test/src_test/include/: parbicop_test.hpp  test_bicop_kernel.hpp  test_bicop_parametric.hpp  test_bicop_sanity_checks.hpp  test_bicop_select.hpp  test_tools_stats.hpp  test_vinecop_class.hpp  test_weights.hpp
